--- a/tema 3/boletin3.html
+++ b/tema 3/boletin3.html
@@ -3,7 +3,9 @@
 <head>
 	<script type="text/javascript" src="boletin3.js"></script>
 </head>
-<body onLoad="inicializar()">
+<body>
+	<input type="button" id="crear-ventana" value="nueva ventana">
+	<input type="button" id="cerrar-ventana" value="cerrar ventana">
 	<!--<button id="abrirVentana">Abrir Ventana</button>
     <button id="cerrarVentana">Cerrar Ventana</button>
 	-->
@@ -25,28 +27,5 @@
             "<p>User-agent header: " + navigator.userAgent + "</p>";
             document.getElementById("demo").innerHTML = text;
             </script>-->
-	<p>Crear dos enlaces, uno para abrir una nueva ventana y uno para cerrarla. 
-		La nueva ventana mostrará este mensaje en una fuente grande : ​”El ojo es la ventana a tu alma “. 
-		La nueva ventana se coloca en la esquina izquierda de la pantalla 
-		, será redimensionable , tendrá una barra de desplazamiento, y estará en primer plano</p>
-	<button id="abrirVentana">Abrir Ventana</button>
-    <button id="cerrarVentana">Cerrar Ventana</button>
-
-    <script>
-        let miVentana; // Variable para almacenar la referencia a la ventana abierta
-
-        // Función para abrir una nueva ventana
-        document.getElementById('abrirVentana').addEventListener('click', function() {
-            miVentana = window.open('', '_blank', 'width=400,height=200');
-            miVentana.document.write('<p style=font-size:40px>​”El ojo es la ventana a tu alma.</p>');
-        });
-
-        // Función para cerrar la ventana abierta
-        document.getElementById('cerrarVentana').addEventListener('click', function() {
-            if (miVentana) {
-                miVentana.close();
-            }
-        });
-    </script>
 </body>
 </html>
