--- a/tema 3/E6BOW.html
+++ b/tema 3/E6BOW.html
@@ -24,4 +24,7 @@
         <input type="button" id="quitar-foco" value="Quitar foco ventana nueva"><br>
         <input type="button" id="scroll-absoluto" value="Scroll absoluto"><br>
         <input type="button" id="scroll-relativo" value="Scroll relativo">
+        <div style="height: 2000px;border: 2px solid black;">
+        <h1 style="height: 200px;">prueba</h1>
+        </div>
 </body>
