--- a/examen/ejercicio1/index.html
+++ b/examen/ejercicio1/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="Ecita.js"></script>
-    <script type="text/javascript" src="Ecliente.js"></script>
-    <script type="text/javascript" src="Eprueba.js"></script>
+    <script type="text/javascript" src="cita.js"></script>
+    <script type="text/javascript" src="cliente.js"></script>
+    <script type="text/javascript" src="prueba.js"></script>
     <title>ejercicio1</title>
 </head>
 <body>
