--- a/examen/ejercicio2/index.html
+++ b/examen/ejercicio2/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="Eintegrante.js"></script>
     <script type="text/javascript" src="Ebanda.js"></script>
     <script type="text/javascript" src="Ebandas.js"></script>
-    <script type="text/javascript" src="Eprueba.js"></script>
+    <script type="text/javascript" src="prueba.js"></script>
     <title>Ejercicio2</title>
 </head>
 <body>
