ejercicio 5 hecho ya empiezo a entender los eventos

--- a/tema5/E4.html
+++ b/tema5/E4.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="estiloE1.css" rel="stylesheet">
     <script type="text/javascript" src="E4.js"></script>
     <title>Document</title>
 </head>
@@ -30,6 +28,8 @@
         <label for="r0">0</label>
         <input type="radio" id="r0" name="preg2"value="0"><br>
         <input type="button" id="boton" value="responder"/>
+        <p>Respuestas Correctas:</p>
+        <textarea id="respuestasCorrectas" rows="4" cols="50" readonly></textarea>
     </form>
     <script src="bootstrap.min.js" ></script>
 </body>
