el 11 no se hacerlo para que después del blur shaga focus en el campo del que sale

--- a/tema5/E10.html
+++ b/tema5/E10.html
@@ -8,8 +8,10 @@
     <script type="text/javascript" src="E1.js"></script>
     <script type="text/javascript" src="E8.js"></script>
     <script type="text/javascript" src="E9.js"></script>
+    <script type="text/javascript" src="E10.js"></script>
 
-    <title>Plantilla E1</title>
+
+    <title>Plantilla E10</title>
 </head>
 <body>
     <form class="container" id="formulario">
