--- a/tema 6/E9.html
+++ b/tema 6/E9.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script defer src="E5.js" type="module"></script>
-    <script defer src="E7.js" type="module"></script>
+    <script src="E9.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="todos-los-viajes">
+        <h1>subtitulo</h1>
+        
+    </div>
 </body>
 </html>
