--- a/tema5/E1.html
+++ b/tema5/E1.html
@@ -6,7 +6,7 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="estiloE1.css" rel="stylesheet">
     <script type="text/javascript" src="E1.js"></script>
-    <script type="text/javascript" src="E8.js"></script>
+    <script defer type="text/javascript" src="E8.js"></script>
     <script type="text/javascript" src="E9.js"></script>
 
     <title>Plantilla E1</title>
